# stochips

./: .dockerignore  .env  .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc.yaml  AGENTS.md  DEPLOY.md  Dockerfile  README.md  build_js.sh  deploy.sh  docker-compose.yml  electron-builder.yml  electron.vite.config.ts  env.d.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
services/agent/: Dockerfile  Dockerfile.rag  README.md  init.sql  main.py  pyproject.toml
services/agent/chain/rag/: main.py
services/agent/chain/stock/: __init__.py  config.py
services/agent/chain/stock/agents/: __init__.py  ai_analyzer.py  codex_client.py  daily_market_review_agent.py  enhanced_risk_agent.py  feishu_notifier.py  risk_agent.py  stock_agent.py
services/agent/chain/stock/data/: __init__.py  fetcher.py  storage.py
services/agent/chain/stock/models/: __init__.py  (+1 more)
services/agent/chain/wiki/: __init__.py
services/agent/graph/: README.md  advanced_workflow.py
services/agent/migrations/: 00000000_schema_migrations.sql  20260506_add_risk_assessment_ai_fields.sql  20260709_add_block_top_stock.sql  20260709_extend_block_top_analysis_fields.sql  20260710_add_daily_job_run.sql  20260710_add_daily_market_review.sql  20260710_add_lower_limit_pool.sql  runner.py
services/agent/tests/: test_ai_flow.py  test_codex_client.py  test_config.py  test_daily_market_review_agent.py  test_feishu_notifier.py  test_fetcher_trading_day_guard.py  test_main.py  test_risk_agent.py  test_scheduler.py  test_stock_agent.py  test_storage_mapping.py
(+225 files in other folders)
